fix: company-text

--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
             </p>
           </div>
         </div>
-        <div class="company-text">
-          <h2 style="text-align: left">СЕРФИНГ</h2>
-          <h2 class="panton-h2" style="text-align: center">это стиль жизни</h2>
-        </div>
         <div class="company">
           <img
             src="public/Подложка вырез (1).png"
             alt=""
             class="company-background-image"
           />
+          <div class="company-text">
+            <h2>СЕРФИНГ</h2>
+            <h2 class="panton-h2">это стиль жизни</h2>
+          </div>
           <div class="company-screen">
             <img
               src="/public/Картинка серфера.png"
