feat: rewards adaptive 900px

--- a/index.html
+++ b/index.html
@@ -186,24 +186,26 @@
             <h2>НАГРАДЫ</h2>
             <h2 class="panton-h2">нашего клуба</h2>
           </div>
-          <div class="rewards-photo-background">
-            <div class="rewards-photo">
-              <img
-                src="public/Картинка.png"
-                alt="reward png"
-                class="rewards-photo-png"
-              />
-              <div class="rewards-photo-text">
-                <p class="text-16">Награда</p>
-                <h3>
-                  «Лучший инструктор <br />
-                  по серфингу 2022»
-                </h3>
-                <p>
-                  от международной организации <br />
-                  Surfers Against Sewage (SAS)
-                </p>
-                <p>(2022)</p>
+          <div class="rewards-photo">
+            <div class="rewards-photo-background-border">
+              <div class="rewards-photo-background">
+                <img
+                  src="public/Картинка.png"
+                  alt="reward png"
+                  class="rewards-photo-png"
+                />
+                <div class="rewards-photo-text">
+                  <p class="text-16">Награда</p>
+                  <h3>
+                    «Лучший инструктор <br />
+                    по серфингу 2022»
+                  </h3>
+                  <p>
+                    от международной организации <br />
+                    Surfers Against Sewage (SAS)
+                  </p>
+                  <p>(2022)</p>
+                </div>
               </div>
             </div>
           </div>
