--- a/index.html
+++ b/index.html
@@ -513,7 +513,11 @@
                   <img src="public/Вайбер.svg" alt="Viber" class="viber" />
                 </div>
               </div>
-              <img src="public/Кнопка онлайн-запись.png" alt="" />
+              <img
+                src="public/Кнопка онлайн-запись.png"
+                alt=""
+                class="online-svg"
+              />
               <div class="location-address-tag">
                 <img
                   src="public/Location.png"
