--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
       <div class="footer">
         <div class="footer-common">
           <div class="footer-way">
-            <img src="public/Лого (1).svg" alt="" />
+            <img src="public/Лого (1).svg" alt="" class="footer-way-logo" />
             <p>
               Свяжитесь с нами любым <br />
               удобным способом
