--- a/index.html
+++ b/index.html
@@ -212,8 +212,16 @@
             class="rewards-background-image"
           /> -->
             <div class="rewards__text">
-              <p>НАГРАДЫ</p>
-              <p>нашего клуба</p>
+              <div class="rewards__text__head head">
+                <p class="head-text">НАГРАДЫ</p>
+                <p class="sup-text">нашего клуба</p>
+              </div>
+              <div class="rewards__text__year year">
+                <button>2022</button>
+                <button>2021</button>
+                <button>2019</button>
+              </div>
+
               <!-- Не делить логические конструкции -->
             </div>
             <div class="rewards__photo">
@@ -226,9 +234,10 @@
                   />
                   <div class="rewards__photo__background__text text">
                     <p>Награда</p>
-                    <p>«Лучший инструктор по серфингу 2022»</p>
+                    <p>«Лучший&nbsp;инструктор по&nbsp;серфингу&nbsp;2022»</p>
                     <p>
-                      от международной организации Surfers Against Sewage (SAS)
+                      от&nbsp;международной&nbsp;организации
+                      Surfers&nbsp;Against&nbsp;Sewage&nbsp;(SAS)
                     </p>
                     <p>(2022)</p>
                   </div>
