--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         <section class="programs-block">
           <div class="programs">
             <div class="programs__text">
-              <p>Программы</p>
-              <p>обучения</p>
+              <p class="head-text">Программы</p>
+              <p class="sup-text">обучения</p>
               <!-- Не делить логические конструкции -->
             </div>
             <div class="programs__card">
@@ -262,7 +262,7 @@
                     class="easy-start__border-image"
                   />
                   <div class="easy-start__border__text">
-                    <p>-тариф-</p>
+                    <p>тариф</p>
                     <!-- Использовать псевдо -->
                     <p>Easy Start</p>
                   </div>
@@ -287,22 +287,22 @@
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>Воссозданный искуственный речной порог</p>
                     </div>
-                    <div class="easy-start-description-mark">
+                    <div class="easy-start__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>Доска с плавниками, как на океане</p>
                     </div>
-                    <div class="easy-start-description-mark">
+                    <div class="easy-start__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>
-                        Даёт возможность отработать технику поворотов, трюки на
-                        волне, развить баланс и мышечную память
+                        Даёт&nbsp;возможность&nbsp;отработать&nbsp;технику&nbsp;поворотов,
+                        трюки&nbsp;на&nbsp;волне,&nbsp;развить&nbsp;баланс&nbsp;и&nbsp;мышечную&nbsp;память
                       </p>
                     </div>
                     <div class="easy-start__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>
-                        Помогает подготовиться к катанию на океанских волнах
-                        (работа тела после поп-ап)
+                        Помогает&nbsp;подготовиться&nbsp;к&nbsp;катанию&nbsp;на&nbsp;океанских
+                        волнах&nbsp;(работа&nbsp;тела&nbsp;после&nbsp;оп-ап)
                       </p>
                     </div>
                   </div>
@@ -310,7 +310,7 @@
                     <p class="easy-start__price-old">29 000 руб.</p>
                     <p class="easy-start__price-new">12 990 руб.</p>
                   </div>
-                  <button name="choose-tarif" class="easy-start__button">
+                  <button name="choose-tarif" class="easy-start__choose">
                     Выбрать тариф
                   </button>
                 </div>
@@ -322,8 +322,8 @@
                     alt="icon-1"
                     class="flow-rider__border-image"
                   />
-                  <div class="flow-rider__text">
-                    <p>-тариф-</p>
+                  <div class="flow-rider__border__text">
+                    <p>тариф</p>
                     <p>Flow Rider</p>
                   </div>
                   <div class="flow-rider__info">
@@ -346,29 +346,29 @@
                     <div class="flow-rider__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>
-                        Напор воды, направленный вверх по натянутой тканевой
-                        поверхности
+                        Напор&nbsp;воды,&nbsp;направленный&nbsp;вверх&nbsp;по&nbsp;натянутой
+                        тканевой&nbsp;поверхности
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>
-                        Доска без плавников, нечто среднее между скейтбордом и
-                        сноубордом
+                        Доска&nbsp;без&nbsp;плавников,&nbsp;нечто&nbsp;среднее&nbsp;между
+                        скейтбордом&nbsp;и&nbsp;сноубордом
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>
-                        Даёт возможность развить баланс и получить яркие эмоции
-                        от катания на волне
+                        Даёт&nbsp;возможность&nbsp;развить&nbsp;баланс&nbsp;и&nbsp;получить&nbsp;яркие
+                        эмоции&nbsp;от&nbsp;катания&nbsp;на&nbsp;волне
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
                       <img src="public/Иконка-галочка.svg" alt="Галочка" />
                       <p>
-                        Возможность поймать удовольствие от движения и
-                        маневрирования на доске по водному потоку
+                        Возможность&nbsp;поймать&nbsp;удовольствие&nbsp;от&nbsp;движения&nbsp;и
+                        маневрирования&nbsp;на&nbsp;доске&nbsp;по&nbsp;водному&nbsp;потоку
                       </p>
                     </div>
                   </div>
@@ -376,7 +376,7 @@
                     <p class="flow-rider__price-old">22 000 руб.</p>
                     <p class="flow-rider__price-new">10 990 руб.</p>
                   </div>
-                  <button name="choose-tarif" class="flow-rider__button">
+                  <button name="choose-tarif" class="flow-rider__choose">
                     Выбрать тариф
                   </button>
                 </div>
