--- a/index.html
+++ b/index.html
@@ -393,68 +393,74 @@
           /> -->
             <!-- Фон переделать -->
             <div class="discounts__text">
-              <p>АКЦИИ</p>
-              <p>и скидки</p>
+              <p class="head-text">АКЦИИ</p>
+              <p class="sup-text">и скидки</p>
             </div>
             <div class="discounts__photos photos">
-              <div class="discounts__photos__card card">
-                <img
-                  src="public/content1.png"
-                  alt="Картинка-1"
-                  class="discounts__photos__card-image"
-                />
-                <div class="discounts__photos__card__text-up text-up">
-                  <p>До 25.04.2024</p>
+              <div class="discounts__photos__border">
+                <div class="discounts__photos__card card">
+                  <img
+                    src="public/content1.png"
+                    alt="Картинка-1"
+                    class="discounts__photos__card-image"
+                  />
+                  <div class="discounts__photos__card__text-up text-up">
+                    <p>До 25.04.2024</p>
+                  </div>
+                  <div class="discounts__photos__card__text-down text-down">
+                    <p>Бесплатный урок серфинга для первого посещения</p>
+                  </div>
+                  <img
+                    src="public/goto.svg"
+                    alt="goto"
+                    class="discounts__photos__card__text-image"
+                  />
                 </div>
-                <div class="discounts__photos__card__text-down text-down">
-                  <p>Бесплатный урок серфинга для первого посещения</p>
-                </div>
-                <img
-                  src="public/goto.svg"
-                  alt="goto"
-                  class="discounts__photos__card__text-image"
-                />
               </div>
-              <div class="discounts__photos__card card">
-                <img
-                  src="public/content2.png"
-                  alt="Картинка-2"
-                  class="discounts__photos__card-image"
-                />
-                <div class="discounts__photos__card__text-up text-up">
-                  <p>Бессрочно</p>
+              <div class="discounts__photos__border">
+                <div class="discounts__photos__card card">
+                  <img
+                    src="public/content2.png"
+                    alt="Картинка-2"
+                    class="discounts__photos__card-image"
+                  />
+                  <div class="discounts__photos__card__text-up text-up">
+                    <p>Бессрочно</p>
+                  </div>
+                  <div class="discounts__photos__card__text-down text-down">
+                    <p>Сертификация или аттестация по окончании курса</p>
+                  </div>
+                  <img
+                    src="public/goto.svg"
+                    alt="goto"
+                    class="discounts__photos__card__text-image"
+                  />
                 </div>
-                <div class="discounts__photos__card__text-down text-down">
-                  <p>Сертификация или аттестация по окончании курса</p>
-                </div>
-                <img
-                  src="public/goto.svg"
-                  alt="goto"
-                  class="discounts__photos__card__text-image"
-                />
               </div>
-              <div class="discounts__photos__card card">
-                <img
-                  src="public/content3.png"
-                  alt="Картинка-3"
-                  class="discounts__photos__card-image"
-                />
-                <div class="discounts__photos__card__text-up text-up">
-                  <p>До 12.05.2024</p>
-                </div>
-                <img
-                  src="public/goto.svg"
-                  alt="goto"
-                  class="discounts__photos__card__text-image"
-                />
-                <div class="discounts__photos__card__text-down text-down">
-                  <p>Пакет серфинга для двоих</p>
+              <div class="discounts__photos__border">
+                <div class="discounts__photos__card card">
+                  <img
+                    src="public/content3.png"
+                    alt="Картинка-3"
+                    class="discounts__photos__card-image"
+                  />
+                  <div class="discounts__photos__card__text-up text-up">
+                    <p>До 12.05.2024</p>
+                  </div>
+                  <img
+                    src="public/goto.svg"
+                    alt="goto"
+                    class="discounts__photos__card__text-image"
+                  />
+                  <div class="discounts__photos__card__text-down text-down">
+                    <p>Пакет серфинга для двоих</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="comment">
-            <p class="comment-text">
+            <p class="comment__text">
               Помните, что каждый ваш выход на доску - это возможность выйти за
               пределы своих комфортных зон и стать лучше, сильнее и увереннее.
               Поверьте в себя, стремитесь к новым вершинам и не забывайте
