--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             <!-- Переделать на псевдо и bg-img-->
             <div class="location__address">
               <div class="location__address__social social">
-                <p>Социальные сети:</p>
+                <p class="text">Социальные&nbsp;сети:</p>
                 <div class="location__address__social__image image">
                   <img src="public/Инст.svg" alt="" class="instagram" />
                   <img src="public/Тик ток.svg" alt="" class="tik-tok" />
@@ -539,7 +539,7 @@
                 </div>
               </div>
               <div class="location__address__contacts contacts">
-                <p>+7 (910) 684-90-53</p>
+                <p class="phone-number">+7&nbsp;(910)&nbsp;684-90-53</p>
                 <div class="location__address__contacts__image image">
                   <img
                     src="public/Телеграм.svg"
@@ -565,12 +565,12 @@
                   alt=""
                   class="location__address__tag__image image"
                 />
-                <p>ул. Черкизова 14, Москва</p>
+                <p>ул.&nbsp;Черкизова&nbsp;14, Москва</p>
               </div>
 
               <div class="location__address__bus">
-                <p>Как добраться?</p>
-                <p>Маршруты: 139, 28б</p>
+                <p>Как&nbsp;добраться?</p>
+                <p>Маршруты:&nbsp;139,&nbsp;28б</p>
               </div>
             </div>
           </div>
