--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                   alt=""
                   class="location__address__tag__image image"
                 />
-                <p>ул.&nbsp;Черкизова&nbsp;14, Москва</p>
+                <p class="street">ул.&nbsp;Черкизова&nbsp;14, Москва</p>
               </div>
 
               <div class="location__address__bus">
@@ -582,11 +582,11 @@
         <div class="footer__common">
           <div class="footer__common__way way">
             <img
-              src="public/Лого (1).svg"
+              src="public/logo-1.svg"
               alt=""
               class="footer__common__way__logo logo"
             />
-            <p>Свяжитесь с нами любым удобным способом</p>
+            <p>Свяжитесь&nbsp;с&nbsp;нами&nbsp;любым удобным&nbsp;способом</p>
             <div class="footer__common__way__contacts-image contacts-image">
               <img src="public/Телеграм.svg" alt="Telegram" class="telegram" />
               <img src="public/Ватсап.svg" alt="WhatsApp" class="whatsapp" />
